--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vout",
   "version": "0.0.4",
+  "engines": {
+    "node": "8.1.4"
+  },
   "description": "Voting app (Project for Free Code Camp)",
   "main": "server.js",
   "scripts": {
